Fixed text alignment. Modified signup/login button sizes

--- a/frontend/fortunate/src/index.css
+++ b/frontend/fortunate/src/index.css
@@ -92,7 +92,7 @@ p {
   text-align: center;
   padding: 10px 0;
   padding-left: 150px;
-  padding-right: 1px;
+  padding-right: 150px;
   font-family: 'Roboto';
   text-shadow: 3px 3px 1px black;
   color: gainsboro
